css flex section

--- a/flex/01-flex-center/index.html
+++ b/flex/01-flex-center/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="box">center this div</div>
+    <div class="box">center these div</div>
+    <div class="box">center these div</div>
   </div>
 </body>
 </html>
